[package]
name = "reinhardt-web"
version = "0.1.0-alpha.18"
edition.workspace = true
license.workspace = true
description = "A full-stack API framework for Rust, inspired by Django and Django REST Framework"
repository.workspace = true
authors.workspace = true
include = [
  "src/**",
  "build.rs",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
]

[lib]
name = "reinhardt"

[features]
default = ["full"]

# Minimal feature set - for microservices and simple APIs
# Provides routing, DI, parameter extraction, HTTP server, and core functionality
minimal = [
  "core",   # Core types, macros, HTTP
  "di",     # Dependency injection
  "server", # HTTP server
]

# Standard feature set - balanced for most projects
standard = [
  "minimal",
  "database",                      # Includes ORM, migrations, contenttypes
  "db-postgres",                   # Default database backend
  "reinhardt-rest",
  "reinhardt-rest/serializers",
  "reinhardt-views/viewsets",
  "reinhardt-auth",
  "reinhardt-middleware",
  "reinhardt-middleware/sessions",
  "reinhardt-rest/pagination",
  "reinhardt-rest/filters",
  "reinhardt-rest/throttling",
  "core",
  "reinhardt-core/signals",
  "reinhardt-rest/parsers",
  "reinhardt-pages",
  "reinhardt-rest/versioning",
  "reinhardt-rest/metadata",
  "reinhardt-rest/negotiation",
]

# Individual feature flags for fine-grained control
database = [
  "reinhardt-db",
  "reinhardt-db/orm",
  "reinhardt-db/migrations",
  "reinhardt-db/contenttypes",
  "linkme",
]
api = [
  "reinhardt-rest",
  "reinhardt-rest/serializers",
  "reinhardt-views/viewsets",
]
auth = ["reinhardt-auth"]
admin = [
  "reinhardt-admin",
  "reinhardt-admin/adapters",
  "reinhardt-admin/server",
  "reinhardt-admin/pages",
  "reinhardt-forms",
  "reinhardt-pages",
]
forms = ["reinhardt-forms"]
graphql = ["reinhardt-graphql"]
pages = ["reinhardt-pages"]
templates = ["reinhardt-pages"]
# pages + web-sys full features for WASM applications
pages-web-sys-full = ["pages", "reinhardt-pages/web-sys-full"]
uuid = ["reinhardt-pages/uuid"]
chrono = ["reinhardt-pages/chrono"]
websockets = ["reinhardt-websockets"]
cache = ["reinhardt-utils/cache"]
redis-backend = ["cache"]
i18n = ["reinhardt-i18n"]
mail = ["reinhardt-mail"]
sessions = ["reinhardt-auth"]
middleware = [
  "reinhardt-middleware",
  "reinhardt-middleware/sessions",
  "sessions",
]
static-files = ["reinhardt-utils/staticfiles"]
storage = ["reinhardt-utils/storage"]
shortcuts = ["reinhardt-shortcuts"]
tasks = ["reinhardt-tasks"]
server = ["reinhardt-server"]
commands = ["reinhardt-commands", "reinhardt-commands/migrations"]

# Parent crate features (new module structure)
conf = ["reinhardt-conf"]
core = ["reinhardt-core", "reinhardt-apps", "inventory"]
rest = ["reinhardt-rest"]
messages = ["reinhardt-core/messages"]
# DI feature: Uses reinhardt-core/di which internally enables reinhardt-di/params
# Also directly enables reinhardt-di/params for macro support (extern crate reinhardt_di)
# reinhardt-db/di enables Injectable implementation for DatabaseConnection
di = ["reinhardt-di", "reinhardt-di/params", "reinhardt-db?/di"]
test = ["reinhardt-test"]
testcontainers = ["test", "reinhardt-test/testcontainers"]
server-fn-test = ["test", "reinhardt-test/server-fn-test"]
openapi = ["reinhardt-rest", "reinhardt-rest/openapi"]
openapi-router = ["reinhardt-openapi", "openapi"]
reinhardt-browsable-api = ["reinhardt-rest", "reinhardt-rest/browsable-api"]
browsable-api = ["reinhardt-browsable-api"]
# Client-router feature: Enables UnifiedRouter<V> with both .server() and .client() methods
# Required for unified client/server routing in WASM applications
client-router = ["reinhardt-urls/client-router"]

# Plugin system
dentdelion = ["reinhardt-dentdelion"]

# Meta features
full = [
  "standard",
  "conf",
  "database",
  "auth",
  "admin",
  "graphql",
  "websockets",
  "cache",
  "i18n",
  "mail",
  "sessions",
  "static-files",
  "storage",
  "commands",
  "test",
  # Parent crate -full features (recursive full feature activation)
  "reinhardt-db/database-full",
  "reinhardt-core/core-full",
  "reinhardt-rest/rest-full",
  "reinhardt-pages/pages-full",
  "reinhardt-urls/urls-full",
  "reinhardt-views/views-full",
  "reinhardt-auth/auth-full",
  "reinhardt-di/di-full",
  "reinhardt-utils/utils-full",
  "reinhardt-server/server-full",
  # Standalone crates full features
  "reinhardt-apps/full",
  "reinhardt-commands/full",
  "reinhardt-forms/full",
  "reinhardt-http/full",
  "reinhardt-i18n/full",
  "reinhardt-mail/full",
  "reinhardt-shortcuts/full",
  "reinhardt-tasks/full",
  "reinhardt-test/full",
  "reinhardt-websockets/full",
  "reinhardt-middleware/full",
  "reinhardt-graphql/full",
  "dentdelion",
]

# API-only preset - REST without templates/forms
api-only = [
  "minimal",
  "reinhardt-rest",
  "reinhardt-rest/serializers",
  "reinhardt-views/viewsets",
  "reinhardt-auth",
  "reinhardt-rest/parsers",
  "reinhardt-pages",
  "reinhardt-rest/versioning",
  "reinhardt-rest/metadata",
  "reinhardt-rest/negotiation",
  "reinhardt-rest/pagination",
  "reinhardt-rest/filters",
  "reinhardt-rest/throttling",
]

# GraphQL-focused preset
graphql-server = ["minimal", "reinhardt-auth", "graphql", "database"]

# WebSocket-centric preset
websocket-server = [
  "minimal",
  "reinhardt-auth",
  "websockets",
  "reinhardt-utils/cache",
]

# CLI/Background jobs preset
cli-tools = [
  "database",
  "reinhardt-db",
  "reinhardt-db/migrations",
  "reinhardt-tasks",
  "mail",
]

# Testing utilities preset
test-utils = ["reinhardt-test", "reinhardt-test/testcontainers", "database"]

# Fine-grained authentication
auth-jwt = ["auth", "reinhardt-auth/jwt"]
auth-session = ["auth", "reinhardt-auth/sessions", "sessions"]
auth-oauth = ["auth", "reinhardt-auth/oauth"]
auth-token = ["auth", "reinhardt-auth/token"]

# Fine-grained database support
db-postgres = ["database", "reinhardt-db/postgres"]
db-mysql = ["database", "reinhardt-db/mysql"]
db-sqlite = ["database", "reinhardt-db/sqlite", "reinhardt-commands/sqlite"]
db-cockroachdb = ["database", "reinhardt-db/cockroachdb-backend"]

# Fine-grained middleware
middleware-cors = ["reinhardt-middleware", "reinhardt-middleware/cors"]
middleware-compression = [
  "reinhardt-middleware",
  "reinhardt-middleware/compression",
]
middleware-security = ["reinhardt-middleware", "reinhardt-middleware/security"]
middleware-rate-limit = [
  "reinhardt-middleware",
  "reinhardt-middleware/rate-limit",
]

[dependencies]
# WASM-compatible dependencies (always included)
reinhardt-pages = { workspace = true, optional = true }

# Server-side dependencies (NOT for WASM)
reinhardt-core = {workspace = true, features = ["types"]}
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Core dependencies
reinhardt-urls = { workspace = true }
reinhardt-utils = { workspace = true }
reinhardt-views = { workspace = true }
reinhardt-http = { workspace = true }
reinhardt-macros = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true }
linkme = { workspace = true, optional = true }

# Parent crate dependencies (new module structure)
reinhardt-apps = { workspace = true, optional = true }
reinhardt-conf = { workspace = true, optional = true }
reinhardt-core = { workspace = true, optional = true }
reinhardt-db = { workspace = true, optional = true }

# External crates re-exported for macros
inventory = { workspace = true, optional = true }
reinhardt-test = { path = "crates/reinhardt-test", version = "0.1.0-alpha.19", optional = true }
reinhardt-rest = { workspace = true, optional = true }
reinhardt-auth = { workspace = true, optional = true }

# Additional optional dependencies
reinhardt-admin = { workspace = true, optional = true }
reinhardt-commands = { workspace = true, optional = true }
reinhardt-di = { workspace = true, optional = true }
reinhardt-forms = { workspace = true, optional = true }
reinhardt-middleware = { workspace = true, optional = true }
reinhardt-shortcuts = { workspace = true, optional = true }
reinhardt-tasks = { workspace = true, optional = true }
reinhardt-server = { workspace = true, optional = true }
reinhardt-i18n = { workspace = true, optional = true }
reinhardt-mail = { workspace = true, optional = true }
reinhardt-graphql = { workspace = true, optional = true }
reinhardt-websockets = { workspace = true, optional = true }
reinhardt-openapi = { workspace = true, optional = true }
reinhardt-dentdelion = { workspace = true, optional = true }

# Dependencies used directly in this crate
thiserror = { workspace = true }
toml = "0.9.8"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
tonic-prost-build = { workspace = true }

[workspace]
resolver = "3"
members = [
  # Core framework (always included)
  "crates/reinhardt-query",
  "crates/reinhardt-query/macros",
  "crates/reinhardt-apps",
  "crates/reinhardt-conf",
  "crates/reinhardt-core",
  "crates/reinhardt-core/macros",
  "crates/reinhardt-di",
  "crates/reinhardt-di/macros",
  "crates/reinhardt-http",
  "crates/reinhardt-server",
  "crates/reinhardt-views",
  "crates/reinhardt-urls",
  "crates/reinhardt-urls/routers-macros",
  "crates/reinhardt-middleware",
  "crates/reinhardt-pages",                             # WASM frontend framework
  "crates/reinhardt-pages/macros",              # WASM frontend macros
  "crates/reinhardt-pages/ast",                        # WASM frontend AST
  "crates/reinhardt-manouche",                         # DSL definitions for pages macros
  "crates/reinhardt-test",
  "crates/reinhardt-tasks",
  "crates/reinhardt-utils",
  "crates/reinhardt-rest",
  "crates/reinhardt-rest/openapi-macros",
  "crates/reinhardt-throttling",
  "crates/reinhardt-auth",
  "crates/reinhardt-admin",                            # Admin panel functionality
  "crates/reinhardt-admin-cli",                        # Admin CLI tool
  "crates/reinhardt-grpc",
  "crates/reinhardt-grpc/macros",
  "crates/reinhardt-commands",
  "crates/reinhardt-db",
  "crates/reinhardt-db-macros",
  "crates/reinhardt-dispatch",
  "crates/reinhardt-shortcuts",
  "crates/reinhardt-forms",
  "crates/reinhardt-i18n",
  "crates/reinhardt-mail",
  "crates/reinhardt-graphql",
  "crates/reinhardt-graphql/macros",
  "crates/reinhardt-websockets",
  "crates/reinhardt-dentdelion",                        # Plugin system
  "crates/reinhardt-deeplink",                          # Mobile deep linking
  "crates/reinhardt-openapi",                           # OpenAPI router wrapper
  # Integration tests
  "tests",
  "tests/integration",
  # Benchmark tests
  "tests/bench",
]

# Exclude examples (independent workspace with own dependency management)
exclude = ["examples"]

default-members = [
  "crates/reinhardt-views",
  "crates/reinhardt-middleware",
  "crates/reinhardt-test",
  "crates/reinhardt-tasks",
  "crates/reinhardt-utils",
  "crates/reinhardt-rest",
]

[workspace.package]
version = "0.1.0-alpha.5"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/kent8192/reinhardt-web"
homepage = "https://github.com/kent8192/reinhardt-web"
authors = ["kent8192 <51869472+kent8192@users.noreply.github.com>"]

[workspace.lints]
# Workspace-level lints (can be overridden by individual crates)

[workspace.dependencies]
# Main facade crate (for workspace members that need to reference the root crate)
reinhardt = { path = ".", package = "reinhardt-web", version = "0.1.0-alpha.18" }

# Internal crates
reinhardt-apps = { path = "crates/reinhardt-apps", version = "0.1.0-alpha.12" }
reinhardt-conf = { path = "crates/reinhardt-conf", version = "0.1.0-alpha.15" }
reinhardt-core = { path = "crates/reinhardt-core", version = "0.1.0-alpha.8" }
reinhardt-di = { path = "crates/reinhardt-di", version = "0.1.0-alpha.9" }
reinhardt-http = { path = "crates/reinhardt-http", version = "0.1.0-alpha.9" }
reinhardt-server = { path = "crates/reinhardt-server", version = "0.1.0-alpha.9" }
reinhardt-views = { path = "crates/reinhardt-views", version = "0.1.0-alpha.15" }
reinhardt-urls = { path = "crates/reinhardt-urls", version = "0.1.0-alpha.15" }
reinhardt-middleware = { path = "crates/reinhardt-middleware", version = "0.1.0-alpha.15" }
reinhardt-pages = { path = "crates/reinhardt-pages", version = "0.1.0-alpha.18" }
reinhardt-pages-macros = { path = "crates/reinhardt-pages/macros", version = "0.1.0-alpha.10" }
reinhardt-pages-ast = { path = "crates/reinhardt-pages/ast", version = "0.1.0-alpha.6" }
reinhardt-manouche = { path = "crates/reinhardt-manouche", version = "0.1.0-alpha.3" }
reinhardt-forms = { path = "crates/reinhardt-forms", version = "0.1.0-alpha.8" }
reinhardt-test = { path = "crates/reinhardt-test" }
reinhardt-tasks = { path = "crates/reinhardt-tasks", version = "0.1.0-alpha.4" }
reinhardt-utils = { path = "crates/reinhardt-utils", version = "0.1.0-alpha.11" }
reinhardt-rest = { path = "crates/reinhardt-rest", version = "0.1.0-alpha.18" }
reinhardt-throttling = { path = "crates/reinhardt-throttling", version = "0.1.0-alpha.3" }
reinhardt-auth = { path = "crates/reinhardt-auth", version = "0.1.0-alpha.15" }
reinhardt-admin = { path = "crates/reinhardt-admin", version = "0.1.0-alpha.16" }
reinhardt-admin-cli = { path = "crates/reinhardt-admin-cli", version = "0.1.0-alpha.17" }
reinhardt-grpc = { path = "crates/reinhardt-grpc", version = "0.1.0-alpha.7" }
reinhardt-grpc-macros = { path = "crates/reinhardt-grpc/macros", version = "0.1.0-alpha.3" }
reinhardt-graphql-macros = { path = "crates/reinhardt-graphql/macros", version = "0.1.0-alpha.4" }
reinhardt-commands = { path = "crates/reinhardt-commands", version = "0.1.0-alpha.20" }
reinhardt-db = { path = "crates/reinhardt-db", version = "0.1.0-alpha.16" }
reinhardt-db-macros = { path = "crates/reinhardt-db-macros", version = "0.1.0-alpha.2" }
reinhardt-query = { path = "crates/reinhardt-query", version = "0.1.0-alpha.5" }
reinhardt-shortcuts = { path = "crates/reinhardt-shortcuts", version = "0.1.0-alpha.14" }
reinhardt-dispatch = { path = "crates/reinhardt-dispatch", version = "0.1.0-alpha.13" }
reinhardt-i18n = { path = "crates/reinhardt-i18n", version = "0.1.0-alpha.7" }
reinhardt-mail = { path = "crates/reinhardt-mail", version = "0.1.0-alpha.12" }
reinhardt-graphql = { path = "crates/reinhardt-graphql", version = "0.1.0-alpha.7" }
reinhardt-websockets = { path = "crates/reinhardt-websockets", version = "0.1.0-alpha.15" }
reinhardt-dentdelion = { path = "crates/reinhardt-dentdelion", version = "0.1.0-alpha.14" }
reinhardt-deeplink = { path = "crates/reinhardt-deeplink", version = "0.1.0-alpha.5" }
reinhardt-openapi = { path = "crates/reinhardt-openapi", version = "0.1.0-alpha.16" }

# Query subcrates
reinhardt-query-macros = { path = "crates/reinhardt-query/macros", version = "0.1.0-alpha.5" }

# Core subcrates
reinhardt-macros = { path = "crates/reinhardt-core/macros", version = "0.1.0-alpha.4" }

# DI subcrates
reinhardt-di-macros = { path = "crates/reinhardt-di/macros", version = "0.1.0-alpha.4" }

# REST subcrates
reinhardt-openapi-macros = { path = "crates/reinhardt-rest/openapi-macros", version = "0.1.0-alpha.5" }

# REST subcrates (continued)
reinhardt-routers-macros = { path = "crates/reinhardt-urls/routers-macros", version = "0.1.0-alpha.4" }

# Web framework
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
futures-util = "0.3.31"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
http = "1.4.0"
http-body-util = "0.1.3"
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_bytes = "0.11"
serde_yaml = "0.9"
serde_urlencoded = "0.7.1"
csv = "1.3"

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "postgres",
  "mysql",
  "any",
  "macros",
  "migrate",
  "rust_decimal",
] }

# TLS
# Pin to avoid build failure in native-tls 0.2.17 (non-exhaustive pattern in openssl.rs)
native-tls = "=0.2.14"

# Authentication & Security
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
rand = "0.8"
rand_core = "0.6"
getrandom = { version = "0.2", features = ["js"] }  # WASM support with js feature
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# GraphQL
async-graphql = "7.0"
async-graphql-warp = "7.0"

# Async traits
async-trait = "0.1.89"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Routing
regex = "1.12.2"
nom = "8.0.0"

# Utilities
chrono = { version = "0.4.42", features = ["serde"] }
inventory = "0.3"
linkme = "0.3"
ctor = "0.6.1"
chrono-tz = "0.10.4"
bytes = "1.10.1"
once_cell = "1.21.3"
tracing = "0.1.41"
parking_lot = "0.12"
base64 = "0.22"

# Template engine & syntax highlighting
tera = { version = "1.20" }
syntect = "5.2"

# Proc macro dependencies
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Cryptography & Security
aes-gcm = "0.10"
sha2 = "0.10.9"
hmac = "0.12"
subtle = "2.6"

# Image Processing
image = "0.25.8"

# Compression
flate2 = "1.1.5"
brotli = "8.0.2"

# Phone Number Validation
phonenumber = "0.3.7"

# Serialization formats
rmp-serde = "1.3.0"
prost = "0.14.1"
prost-build = "0.14.1"

# gRPC
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

# Redis (for sessions)
# Temporarily downgraded to 0.32 due to deadpool-redis compatibility
# TODO: Upgrade to redis 1.0 when deadpool-redis supports it
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Connection pooling & migrations
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
rust_decimal = "1.37"

# Testing
testcontainers = { version = "0.26.3", features = ["blocking"] }
testcontainers-modules = { version = "0.14.0", features = [
  "postgres",
  "mysql",
  "redis",
] }
proptest = "1.8.0"
arbitrary = { version = "1.4", features = ["derive"] }
tokio-test = "0.4.4"
serial_test = "3.2.0"
rstest = "0.26.1"
mockall = "0.14.0"
assert-json-diff = "2.0.2"
predicates = "3.1"
scopeguard = "1.2.0"
tempfile = "3.15.0"
trybuild = "1.0.114"
url = "2.5.4"
criterion = { version = "0.5", features = ["html_reports"] }

# SQL Query Builder
sea-query = { version = "1.0.0-rc.29", features = [
  "with-json",
  "with-chrono",
  "with-rust_decimal",
  "with-uuid",
  "postgres-array",
  "sqlx-utils",
  "backend-postgres",
  "backend-mysql",
  "backend-sqlite",
] }

# Documentation
aquamarine = "0.5"

# TODO: Monitor and upgrade when upstream fixes num-bigint-dig v0.8.x future incompatibility
# Issue: https://github.com/rust-lang/rust/issues/120192
# Current: v0.8.6 via sqlx -> sqlx-mysql -> rsa v0.9.x
# Fixed in: num-bigint-dig v0.9.0+
# Action: Upgrade when rsa or sqlx upgrades their dependencies
# (private vec macro issue, see https://github.com/rust-lang/rust/issues/120192)
