[package]
name = "reinhardt-framework-comparison-benchmarks"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[[bin]]
name = "measure_matrix"
path = "src/bin/measure_matrix.rs"

[[bench]]
name = "runtime_http"
harness = false

[dependencies]
actix-web = "4.14.0"
async-trait = "0.1.89"
axum = "0.8.9"
bytes = "1.11.0"
criterion = "0.8.0"
hyper = { version = "1.8.1", features = ["http1", "server"] }
loco-rs = { version = "0.16.4", default-features = false, features = ["testing"] }
reqwest = { version = "0.13.4", default-features = false }
reinhardt-core = { path = "../crates/reinhardt-core", default-features = false, features = ["exception"] }
reinhardt-http = { path = "../crates/reinhardt-http" }
reinhardt-server = { path = "../crates/reinhardt-server", default-features = false, features = ["server"] }
reinhardt-urls = { path = "../crates/reinhardt-urls", default-features = false, features = ["routers"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "sync", "time"] }
