[workspace]
resolver = "2"
members = [
	"examples-hello-world",
	"examples-rest-api",
	"examples-database-integration",
	"examples-tutorial-basis",
	"examples-tutorial-rest",
	"examples-github-issues",
	"examples-twitter",
	"examples-di-showcase",
]

# Note: Each example has a binary named "manage"
# This is intentional - examples are meant to be run individually:
#   cd examples-hello-world && cargo run
#   cd examples-rest-api && cargo run
#   cd examples-database-integration && cargo run
#
# Uses crates.io published versions by default.
# For local development, copy .cargo/config.local.toml to .cargo/config.toml

[workspace.dependencies]
# Reinhardt framework (crates.io published versions)
reinhardt = { version = "0.1.0-rc.9", package = "reinhardt-web" }

# Testing
testcontainers = { version = "0.27.2", features = ["blocking"] }
tokio = { version = "1.48.0", features = ["full"] }
rstest = "0.26.1"
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3.2"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }

# Error handling
anyhow = "1.0.100"

# Shared lint configuration for all examples.
# reinhardt_macros generates code with cfg(native), cfg(wasm), and
# cfg(feature = "url-resolver") that are defined in the main workspace but not
# in the examples workspace. Declare them here so check-cfg does not reject them.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(native)',
	'cfg(wasm)',
	'cfg(with_reinhardt)',
	'cfg(feature, values("url-resolver"))',
] }
