[workspace]
resolver = "2"
members = [
	"examples-tutorial-basis",
	"examples-tutorial-rest",
]

# Note: Each example has a binary named "manage"
# This is intentional - examples are meant to be run individually:
#   cd examples-hello-world && cargo run
#   cd examples-rest-api && cargo run
#   cd examples-database-integration && cargo run
#
# Resolve Reinhardt from the parent checkout so examples validate the current
# workspace release line before and after publication to crates.io.

[workspace.dependencies]
# Reinhardt framework from this repository.
# reinhardt-version-sync
reinhardt = { path = "..", version = "0.3.0-rc.4", package = "reinhardt-web" }

# Testing
testcontainers = { version = "0.27.2", features = ["blocking"] }
tokio = { version = "1.48.0", features = ["full"] }
rstest = "0.26.1"
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3.2"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }

# Error handling
anyhow = "1.0.100"

# Shared lint configuration for all examples.
# reinhardt_macros generates code with cfg(native), cfg(wasm) that are defined
# in the main workspace but not in the examples workspace. Declare them here so
# check-cfg does not reject them.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(native)',
	'cfg(server)',
	'cfg(wasm)',
	'cfg(with_reinhardt)',
] }
