[package]
name = "reinhardt-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# Reinhardt crates
reinhardt-admin = { path = "../crates/reinhardt-contrib/crates/admin" }
reinhardt-apps = { workspace = true }
reinhardt-auth = { path = "../crates/reinhardt-contrib/crates/auth" }
reinhardt-browsable-api = { path = "../crates/reinhardt-rest/crates/browsable-api" }
reinhardt-cache = { path = "../crates/reinhardt-utils/crates/cache", features = ["redis-sentinel", "memcached-backend"] }
reinhardt-commands = { workspace = true }
reinhardt-contrib = { workspace = true }
reinhardt-contenttypes = { path = "../crates/reinhardt-contrib/crates/contenttypes", features = ["database"] }
reinhardt-di = { workspace = true }
reinhardt-exception = { path = "../crates/reinhardt-core/crates/exception" }
reinhardt-hybrid = { path = "../crates/reinhardt-db/crates/hybrid" }
reinhardt-filters = { path = "../crates/reinhardt-rest/crates/filters" }
reinhardt-forms = { workspace = true }
reinhardt-graphql = { path = "../crates/reinhardt-contrib/crates/graphql" }
reinhardt-http = { workspace = true }
reinhardt-i18n = { path = "../crates/reinhardt-contrib/crates/i18n" }
reinhardt-logging = { path = "../crates/reinhardt-utils/crates/logging" }
reinhardt-macros = { path = "../crates/reinhardt-core/crates/macros" }
reinhardt-mail = { path = "../crates/reinhardt-contrib/crates/mail" }
reinhardt-messages = { path = "../crates/reinhardt-contrib/crates/messages" }
reinhardt-metadata = { path = "../crates/reinhardt-rest/crates/metadata" }
reinhardt-middleware = { workspace = true }
reinhardt-migrations = { path = "../crates/reinhardt-db/crates/migrations" }
reinhardt-negotiation = { path = "../crates/reinhardt-rest/crates/negotiation" }
reinhardt-orm = { path = "../crates/reinhardt-db/crates/orm", features = ["postgres", "sqlite"] }
reinhardt-pagination = { path = "../crates/reinhardt-rest/crates/pagination" }
reinhardt-params = { path = "../crates/reinhardt-di/crates/params" }
reinhardt-parsers = { path = "../crates/reinhardt-rest/crates/parsers" }
reinhardt-proxy = { path = "../crates/reinhardt-urls/crates/proxy" }
reinhardt-renderers = { path = "../crates/reinhardt-template/crates/renderers" }
reinhardt-rest = { workspace = true }
reinhardt-routers = { path = "../crates/reinhardt-urls/crates/routers" }
reinhardt-security = { path = "../crates/reinhardt-core/crates/security" }
reinhardt-serializers = { path = "../crates/reinhardt-rest/crates/serializers" }
reinhardt-server = { workspace = true }
reinhardt-sessions = { path = "../crates/reinhardt-contrib/crates/sessions", features = ["database"] }
reinhardt-settings = { path = "../crates/reinhardt-conf/crates/settings" }
reinhardt-shortcuts = { workspace = true }
reinhardt-signals = { path = "../crates/reinhardt-core/crates/signals" }
reinhardt-static = { path = "../crates/reinhardt-contrib/crates/static" }
reinhardt-storage = { path = "../crates/reinhardt-utils/crates/storage" }
reinhardt-tasks = { workspace = true }
reinhardt-template = { workspace = true }
reinhardt-test = { workspace = true }
reinhardt-throttling = { path = "../crates/reinhardt-rest/crates/throttling" }
reinhardt-types = { path = "../crates/reinhardt-core/crates/types" }
reinhardt-utils = { workspace = true }
reinhardt-validators = { path = "../crates/reinhardt-core/crates/validators" }
reinhardt-versioning = { path = "../crates/reinhardt-rest/crates/versioning" }
reinhardt-views = { workspace = true }
reinhardt-viewsets = { path = "../crates/reinhardt-views/crates/viewsets" }
reinhardt-websockets = { path = "../crates/reinhardt-contrib/crates/websockets" }

# External dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tera = "1.20"
async-graphql = "7.0"
base64 = "0.22"
percent-encoding = "2.3"
uuid = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
serial_test = { workspace = true }
rstest = "0.26.1"
sqlx = { workspace = true }
sea-query = { workspace = true }
ctor = "0.6.0"
linkme = "0.3"

# gRPC integration dependencies
reinhardt-grpc = { workspace = true }
reinhardt-graphql-macros = { workspace = true }
tonic = { version = "0.14.2", features = ["transport"] }
tokio-stream = { workspace = true, features = ["sync"] }
prost = "0.14.1"
async-stream = "0.3"

[build-dependencies]
tonic-prost-build = "0.14.2"
tonic-build = "0.14.2"
protox = "0.9.0"

[lib]
path = "integration/src/lib.rs"
