[package]
name = "reinhardt-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# Reinhardt crates
reinhardt-commands = { workspace = true }
reinhardt-auth = { workspace = true }
reinhardt-panel = { workspace = true }
reinhardt-graphql = { workspace = true }
reinhardt-websockets = { workspace = true }
reinhardt-i18n = { workspace = true }
reinhardt-mail = { workspace = true }
reinhardt-core = { workspace = true, features = [
    "exception",
    "macros",
    "security",
    "signals",
    "types",
    "validators",
    "messages",
] }
reinhardt-db = { workspace = true, features = [
    "hybrid",
    "migrations",
    "contenttypes",
] }
reinhardt-conf = { workspace = true, features = ["settings"] }
reinhardt-forms = { workspace = true }
reinhardt-middleware = { workspace = true }
reinhardt-orm = { path = "../crates/reinhardt-db/crates/orm", features = [
    "postgres",
    "sqlite",
] }
reinhardt-rest = { workspace = true, features = [
    "browsable-api",
    "filters",
    "metadata",
    "negotiation",
    "pagination",
    "parsers",
    "serializers",
    "throttling",
    "versioning",
] }
reinhardt-urls = { workspace = true, features = ["proxy", "routers"] }
reinhardt-server = { workspace = true }
reinhardt-shortcuts = { workspace = true }
reinhardt-tasks = { workspace = true }
reinhardt-template = { workspace = true, features = ["renderers"] }
reinhardt-test = { workspace = true }
reinhardt-utils = { workspace = true, features = [
    "cache",
    "logging",
    "storage",
    "static",
] }
reinhardt-views = { workspace = true, features = ["viewsets"] }

# External dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tera = "1.20"
async-graphql = "7.0"
base64 = "0.22"
percent-encoding = "2.3"
uuid = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
serial_test = { workspace = true }
rstest = "0.26.1"
sqlx = { workspace = true }
sea-query = { workspace = true }
ctor = "0.6.0"
linkme = "0.3"

# gRPC integration dependencies
reinhardt-grpc = { workspace = true }
reinhardt-graphql-macros = { workspace = true }
tonic = { version = "0.14.2", features = ["transport"] }
tokio-stream = { workspace = true, features = ["sync"] }
prost = "0.14.1"
async-stream = "0.3"

[build-dependencies]
tonic-prost-build = "0.14.2"
tonic-build = "0.14.2"
protox = "0.9.0"

[lib]
path = "integration/src/lib.rs"
