[package]
name = "reinhardt-admin-cli"
version = "0.1.0-alpha.17"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line tool for Reinhardt project management"
publish = true

[dependencies]
# Documentation
aquamarine = "0.5"

reinhardt-commands = { workspace = true, features = ["plugins"] }
reinhardt-dentdelion = { workspace = true, features = ["cli"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { workspace = true }
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
colored = "2.1"
ctrlc = "3.4"
regex = "1.10"
reinhardt-pages = {workspace = true, features = ["ast"]}
zeroize = "1.8"

[dev-dependencies]
tempfile = "3.8"
rstest = { workspace = true }

[features]
full = []

[[bin]]
name = "reinhardt-admin"
path = "src/main.rs"
