[package]
name = "reinhardt-admin-cli"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line tool for Reinhardt project management"
publish = true

[dependencies]
# Documentation
aquamarine = "0.5"

reinhardt-commands = { workspace = true, features = ["plugins"] }
reinhardt-dentdelion = { workspace = true, features = ["cli"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { workspace = true }
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "parsing", "visit-mut"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
prettyplease = "0.2"
colored = { workspace = true }
ctrlc = "3.4"
regex = "1.10"
tree-sitter = { version = "0.26", optional = true }
tree-sitter-rust = { version = "0.24.2", optional = true }
tree-sitter-reinhardt-page = { workspace = true, optional = true }
tree-sitter-reinhardt-form = { workspace = true, optional = true }
tree-sitter-reinhardt-head = { workspace = true, optional = true }
topiary-core = { workspace = true, optional = true }
topiary-tree-sitter-facade = { workspace = true, optional = true }
zeroize = { version = "1.8", optional = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
rstest = { workspace = true }
walkdir = "2.5"

[features]
dsl-format = [
	"dep:tree-sitter",
	"dep:tree-sitter-rust",
	"dep:tree-sitter-reinhardt-page",
	"dep:tree-sitter-reinhardt-form",
	"dep:tree-sitter-reinhardt-head",
	"dep:topiary-core",
	"dep:topiary-tree-sitter-facade",
	"dep:zeroize",
]
full = []

[lib]
name = "reinhardt_admin_cli"
path = "src/lib.rs"

[[bin]]
name = "reinhardt-admin"
path = "src/main.rs"
