[package]
name = "reinhardt-admin-cli"
version = "0.2.0-rc.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line tool for Reinhardt project management"
publish = true

[dependencies]
# Documentation
aquamarine = "0.5"

reinhardt-commands = { workspace = true, features = ["plugins"] }
reinhardt-dentdelion = { workspace = true, features = ["cli"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = "0.12.0"
tokio = { workspace = true }
walkdir = "2.5"
syn = { version = "2.0", features = ["full", "parsing", "visit-mut"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
prettyplease = "0.2"
colored = { workspace = true }
ctrlc = "3.4"
regex = "1.10"
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
rstest = { workspace = true }
proptest = { workspace = true }
walkdir = "2.5"

[features]
full = []

[lib]
name = "reinhardt_admin_cli"
path = "src/lib.rs"

[[bin]]
name = "reinhardt-admin"
path = "src/main.rs"
doc = false
