[package]
name = "reinhardt-admin"
version = "0.1.0-alpha.19"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Admin panel functionality for Reinhardt framework"
publish = true

[dependencies]
reinhardt-apps = { workspace = true }
reinhardt-auth = { workspace = true, features = ["argon2-hasher", "params"] }
reinhardt-core = { workspace = true, features = ["exception"]}
reinhardt-db = { workspace = true, features = ["orm"] }
reinhardt-di = { workspace = true }
reinhardt-http = { workspace = true }
reinhardt-urls = { workspace = true, features = ["routers"] }
reinhardt-utils = { workspace = true, features = ["storage", "utils-core"] }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
dashmap = "6.1.0"
chrono = { workspace = true }
reinhardt-query = { workspace = true }
rayon = "1.10"
csv = "1.3"
uuid = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
reinhardt-pages = { workspace = true }
wasm-bindgen = "0.2.106"
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3.83", features = [
	"Window",
	"Document",
	"Element",
	"HtmlElement",
	"Node",
	"Event",
	"MouseEvent",
	"KeyboardEvent",
	"InputEvent",
	"HtmlInputElement",
	"HtmlFormElement",
	"HtmlButtonElement",
	"History",
	"Location",
	"Storage",
] }
js-sys = "0.3.83"
serde-wasm-bindgen = "0.6"
serde_urlencoded = { workspace = true }  # Needed for URL codec in server functions
serde_bytes = { workspace = true }

[features]
default = []

# Module features (modules are always compiled, features for backwards compatibility)
adapters = []
core = []
pages = []
server = []
types = []

# All features
all = ["adapters", "core", "pages", "server", "types"]
file-uploads = []
admin = []
full = ["console_error_panic_hook", "file-uploads", "all"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dev-dependencies]
reinhardt-db = { workspace = true }
tokio-test = { workspace = true }
rstest = { workspace = true }
wasm-bindgen-test = "0.3.56"
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls"] }
# Pin to avoid build failure in native-tls 0.2.17 (non-exhaustive pattern in openssl.rs)
native-tls = { workspace = true }
